<resources>
    <string name="app_name">墙小二</string>

    <!-- 测试值 -->
    <string name="test">测试</string>

    <!-- 加载失败 -->
    <string name="load_error">加载失败，点击可重新加载</string>
    <string name="load_done">没有更多了</string>

    <!-- dialog相关 -->
    <string name="dialog_progress_text">正在上传…</string>

    <!-- 主界面底部导航栏标题 -->
    <string name="menu_main_first">新闻</string>
    <string name="menu_main_second">读书</string>
    <string name="menu_main_third">@null</string>
    <string name="menu_main_fourth">失物招领</string>
    <string name="menu_main_fifth">我的</string>

    <!-- 左侧导航栏标题 -->
    <string name="menu_nv_left_first">应用简介</string>
    <string name="menu_nv_left_second">点个赞</string>
    <string name="menu_nv_left_third">联系我们</string>
    <string name="menu_nv_left_fourth">分享应用</string>
    <string name="menu_nv_left_fifth">版权声明</string>
    <string name="menu_nv_left_sixth">开源项目</string>

    <!-- 失物招领tabLayout的标题 -->
    <string-array name="fragment_d_tab_titles">
        <item>首页</item>
        <item>拾到证件</item>
        <item>一键丢失</item>
        <item>个人信息</item>
    </string-array>

    <!-- 失物招领首页 -->
    <string name="fragment_d_a_catalog">类型</string>
    <string name="fragment_d_a_search">搜索</string>
    <string name="fragment_d_a_new">最新动态</string>

    <!-- 失物招领tabLayout的标题 -->
    <string-array name="fragment_d_a_tab_titles">
        <item>寻物启事</item>
        <item>招领启事</item>
    </string-array>

    <!-- 失物招领登陆捡到物品 -->
    <string name="fragment_d_b_right">下一步</string>
    <string name="fragment_d_b_left">上一步</string>

    <string name="fragment_d_b_a_student_card">校园卡</string>
    <string name="fragment_d_b_a_bank_card">银行卡</string>
    <string name="fragment_d_b_a_id_card">身份证</string>
    <string name="fragment_d_b_a_else">其它</string>

    <string name="fragment_d_b_b_hint_msg">简单描述一下经过吧(失主个人信息可通过拍照识别呦!)</string>
    <string name="fragment_d_b_b_hint_msg_desc">最多100字</string>
    <string name="fragment_d_b_b_take_photo">照片</string>
    <string name="fragment_d_b_b_take_photo_cancel">取消</string>
    <string name="fragment_d_b_b_take_photo_camera">相机</string>
    <string name="fragment_d_b_b_take_photo_album">本地相册</string>

    <string name="fragment_d_b_c_hint_name">姓名</string>
    <string name="fragment_d_b_c_hint_id">学号</string>
    <string name="fragment_d_b_c_hint_collage">学院</string>
    <string name="fragment_d_b_c_fix">信息有误?在这里键入正确信息修改</string>
    <string name="fragment_d_b_c_commit">点 我 发 布</string>
    <string name="fragment_d_b_c_fail_dialog_title">上传失败</string>
    <string name="fragment_d_b_c_fail_dialog_content">上传失败,您可以尝试重新上传或者取消并保存信息</string>
    <string name="fragment_d_b_c_fail_dialog_exit">取消并保存</string>
    <string name="fragment_d_b_c_fail_dialog_retry">重新上传</string>

    <string name="fragment_d_b_d_thank">这是已发布的第X条招领启事,感谢您的支持</string>
    <string name="fragment_d_b_d_clickable">您还可以 去查看 | 继续发布</string>

    <string name="fragment_d_b_already_lost">已丢失</string>
    <string name="fragment_d_b_publish">点我发布</string>

    <!-- 失物招领登陆捡到物品步骤描述 -->
    <string-array name="stepLabels">
        <item>物品类型</item>
        <item>详细信息</item>
        <item>预览发布</item>
    </string-array>

    <!-- 失物招领登陆发布信息 -->
    <string name="fragment_d_c_loser_info">遗失物品信息</string>
    <string name="fragment_d_c_loser_info_sub_title">请填写遗失物品信息</string>
    <string name="fragment_d_c_student_card">学生证</string>
    <string name="fragment_d_c_graduate_student_card">研究生证</string>
    <string name="fragment_d_c_stuff_card">教工证</string>
    <string name="fragment_d_c_id_card">身份证</string>
    <string name="fragment_d_c_else">其它</string>
    <string name="fragment_d_c_go_to_simple">点我一键生成</string>
    <string name="fragment_d_c_hint_name">姓名</string>
    <string name="fragment_d_c_hint_id">学号</string>
    <string name="fragment_d_c_hint_collage">学院</string>
    <string name="fragment_d_c_already_lost">已丢失</string>
    <string name="fragment_d_c_hint_msg">请输入丢失物品的详细描述</string>
    <string name="fragment_d_c_hint_msg_desc">最多100字</string>
    <string name="fragment_d_c_publish">点我发布</string>

    <!-- 失物招领用户界面 -->
    <string name="fragment_d_d_publish">我发布的</string>
    <string name="fragment_d_d_lost">我丢失的</string>
    <string name="fragment_d_d_my_card">我的校卡</string>
    <string name="fragment_d_d_drafts">草稿箱</string>
    <string name="fragment_d_d_share">分享应用</string>

    <!-- 失物招领用户设置 -->
    <string name="fragment_d_setting_title">设置</string>
    <string name="fragment_d_setting_head_image">头像</string>
    <string name="fragment_d_setting_name">昵称</string>
    <string name="fragment_d_setting_college">学院</string>
    <string name="fragment_d_setting_phone_number">手机号</string>
    <string name="fragment_d_setting_password">修改密码</string>
    <string name="fragment_d_setting_quit">退 出 登 录</string>

    <!-- 失物招领用户登陆界面 -->
    <string name="fragment_d_login">登陆</string>
    <string name="fragment_d_accent_hint">手机号或者学号</string>
    <string name="fragment_d_password_hint">密码</string>
    <string name="fragment_d_forget">忘记密码？</string>
    <string name="fragment_d_login_button">登 陆</string>

    <!-- 失物招领用户注册界面 -->
    <string name="fragment_d_register">注册</string>
    <string name="fragment_d_register_name">姓名</string>
    <string name="fragment_d_register_id">学号</string>
    <string name="fragment_d_register_password">密码</string>
    <string name="fragment_d_register_password_confirm">确认密码</string>
    <string name="fragment_d_register_college">学院</string>
    <string name="fragment_d_register_phone">手机号</string>
    <string name="fragment_d_register_code_confirm">验证码</string>
    <string name="fragment_d_register_button">注 册</string>
    <string name="fragment_d_register_agreement">注册即代表同意《用户协议》</string>

</resources>
