<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_main_first"
        android:title="@string/menu_main_first"
        android:icon="@drawable/ic_me"
        >
    </item>
    <item
        android:id="@+id/menu_main_second"
        android:title="@string/menu_main_second"
        android:icon="@drawable/ic_me"
        >
    </item>
    <item
        android:id="@+id/menu_main_third"
        android:title="@string/menu_main_third"
        android:icon="@null"
        >
    </item>
    <item
        android:id="@+id/menu_main_fourth"
        android:title="@string/menu_main_fourth"
        android:icon="@drawable/ic_lost_and_found"
        >
    </item>
    <item
        android:id="@+id/menu_main_fifth"
        android:title="@string/menu_main_fifth"
        android:icon="@drawable/ic_me"
        >
    </item>
</menu>