<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.neuwljs.wallsmalltwo.view.widget.custom.layout.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/componentMarginBottom"
        app:titleText="@string/fragment_d_setting_title"
        app:rightGone="true"
        app:leftGone="false"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.neuwljs.wallsmalltwo.view.widget.custom.layout.SettingBarLayout
            android:id="@+id/fragment_setting_d_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setItemName="@string/fragment_d_setting_head_image" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fragment_setting_d_head_image"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="32dp"/>
    </FrameLayout>
    <com.neuwljs.wallsmalltwo.view.widget.custom.layout.SettingBarLayout
        android:id="@+id/fragment_setting_d_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setItemName="@string/fragment_d_setting_name" />
    <com.neuwljs.wallsmalltwo.view.widget.custom.layout.SettingBarLayout
        android:id="@+id/fragment_setting_d_college"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setItemName="@string/fragment_d_setting_college"/>
    <com.neuwljs.wallsmalltwo.view.widget.custom.layout.SettingBarLayout
        android:id="@+id/fragment_setting_d_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setItemName="@string/fragment_d_setting_phone_number"/>
    <com.neuwljs.wallsmalltwo.view.widget.custom.layout.SettingBarLayout
        android:id="@+id/fragment_setting_d_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setItemName="@string/fragment_d_setting_password" />
    <Button
        android:id="@+id/fragment_setting_d_quit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fragment_d_setting_quit"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/subTitle" />
</LinearLayout>