<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/componentMarginRight"
            android:layout_marginLeft="@dimen/componentMarginRight"
            android:layout_marginTop="@dimen/componentMarginTop"
            android:layout_marginBottom="@dimen/componentMarginBottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/componentMarginTop"
                android:text="@string/fragment_d_c_loser_info"
                android:textColor="@color/colorTextNormal"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/mainTitle" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/componentMarginTop"
                android:text="@string/fragment_d_c_loser_info_sub_title"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subTitle" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_d_c_student_card"
                    android:textSize="@dimen/text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_d_c_graduate_student_card"
                    android:textSize="@dimen/text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_d_c_stuff_card"
                    android:textSize="@dimen/text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_d_c_id_card"
                    android:textSize="@dimen/text"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_d_c_else"
                    android:textSize="@dimen/text"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/componentMarginRight"
                android:layout_marginLeft="@dimen/componentMarginRight"
                android:layout_marginTop="@dimen/componentMarginTop"
                android:layout_marginBottom="@dimen/componentMarginBottom"
                android:gravity="end">
                <Button
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_d_c_go_to_simple"
                    android:layout_marginBottom="@dimen/componentMarginBottom"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_d_c_hint_name"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_d_c_hint_id"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fragment_d_c_hint_collage"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <android.support.percent.PercentFrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/componentMarginRight"
                android:layout_marginLeft="@dimen/componentMarginRight"
                android:layout_marginTop="@dimen/componentMarginTop"
                android:layout_marginBottom="@dimen/componentMarginBottom">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_student_card"
                    android:adjustViewBounds="true"/>
                <ImageView
                    android:layout_height="20dp"
                    android:layout_width="20dp"
                    android:src="@drawable/ic_status_lost"
                    android:layout_gravity="start|bottom"
                    android:adjustViewBounds="true"
                    app:layout_marginBottomPercent="4%"
                    app:layout_marginStartPercent="15%"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_d_b_already_lost"
                    android:textSize="@dimen/text"
                    android:textColor="@color/colorTextWhite"
                    android:layout_gravity="start|bottom"
                    app:layout_marginBottomPercent="4%"
                    app:layout_marginStartPercent="25%"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    app:layout_marginStartPercent="40%">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/componentMarginBottom">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_d_c_hint_name"
                            android:textColor="@color/colorTextNormal"
                            android:textSize="@dimen/text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextNormal"
                            android:textSize="@dimen/text"
                            android:text="@string/test"
                            android:layout_marginLeft="@dimen/componentMarginLeft"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/componentMarginBottom">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_d_c_hint_id"
                            android:textColor="@color/colorTextNormal"
                            android:textSize="@dimen/text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextNormal"
                            android:textSize="@dimen/text"
                            android:text="@string/test"
                            android:layout_marginLeft="@dimen/componentMarginLeft"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/componentMarginBottom">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fragment_d_c_hint_collage"
                            android:textColor="@color/colorTextNormal"
                            android:textSize="@dimen/text"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextNormal"
                            android:textSize="@dimen/text"
                            android:text="@string/test"
                            android:layout_marginLeft="@dimen/componentMarginLeft"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.percent.PercentFrameLayout>
            <View style="@style/HorizontalLineStyle" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_d_c_hint_msg"
                android:layout_margin="@dimen/componentSelfMargin"
                android:background="@null"
                android:gravity="top"
                android:minLines="6"
                android:maxLines="6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_d_c_hint_msg_desc"
                android:layout_gravity="end|center_horizontal"
                android:textSize="@dimen/subTitle" />
            <Button
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/componentMarginTop"
                android:text="@string/fragment_d_c_publish"
                android:layout_marginBottom="@dimen/componentMarginBottom"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/componentMarginBottom"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>