<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">
    <com.neuwljs.wallsmalltwo.view.widget.custom.view.MyArcView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:arcHeight="180dp"
        app:bgColor="@color/colorAccentLight" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragmentDTabLayoutHeight">
        <ImageView
            android:id="@+id/fragment_d_d_set"
            android:layout_width="@dimen/iconSize"
            android:layout_height="@dimen/iconSize"
            android:src="@drawable/ic_set"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/componentSelfMargin"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragmentDTabLayoutHeight"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fragment_d_d_user_head_image"
            android:layout_width="@dimen/lostItemSize"
            android:layout_height="@dimen/lostItemSize"
            android:src="@drawable/ic_test_1"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/fragment_d_d_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:layout_marginTop="@dimen/componentMarginTop"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/subTitle"
            android:textColor="@color/colorTextNormal"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragmentDTabLayoutHeight"
            android:background="#ffffff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.neuwljs.wallsmalltwo.view.widget.custom.layout.ListLayout
                    android:id="@+id/fragment_d_d_publish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_list_publish"
                    app:text="@string/fragment_d_d_publish"/>
                <com.neuwljs.wallsmalltwo.view.widget.custom.layout.ListLayout
                    android:id="@+id/fragment_d_d_lost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_list_lost"
                    app:text="@string/fragment_d_d_lost"/>
                <com.neuwljs.wallsmalltwo.view.widget.custom.layout.ListLayout
                    android:id="@+id/fragment_d_d_my_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_my_card"
                    app:text="@string/fragment_d_d_my_card"/>
                <com.neuwljs.wallsmalltwo.view.widget.custom.layout.ListLayout
                    android:id="@+id/fragment_d_d_drafts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_list_drafts"
                    app:text="@string/fragment_d_d_drafts"/>
                <com.neuwljs.wallsmalltwo.view.widget.custom.layout.ListLayout
                    android:id="@+id/fragment_d_d_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_list_share"
                    app:text="@string/fragment_d_d_share"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>