<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_message_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_ios_style"
    android:orientation="vertical"
    android:paddingTop="@dimen/dialogPadding" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fragment_d_b_c_fail_dialog_title"
        android:textColor="@color/colorTextNormal"
        android:textSize="@dimen/subTitle"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/componentSelfMargin"
        android:text="@string/fragment_d_b_c_fail_dialog_content"
        android:textColor="@color/colorTextNormal"
        android:textSize="@dimen/text" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_line_size"
        android:layout_marginTop="@dimen/componentMarginTop"
        android:background="@color/dialog_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/fragment_d_b_c_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_button"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/fragment_d_b_c_fail_dialog_exit"
            android:textColor="@color/dialog_cancel"
            android:textSize="@dimen/text" />
        <View
            android:id="@+id/v_dialog_message_line"
            android:layout_width="@dimen/dialog_line_size"
            android:layout_height="match_parent"
            android:background="@color/dialog_line" />
        <TextView
            android:id="@+id/fragment_d_b_c_dialog_retry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_button"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/fragment_d_b_c_fail_dialog_retry"
            android:textColor="@color/dialog_confirm"
            android:textSize="@dimen/text" />
    </LinearLayout>
</LinearLayout>